fix(account): tile width on mobile and cta update (#13385)
ref: MANAGER-15337

--- a/packages/manager/apps/dedicated/client/app/account/identity-documents/components/identity-documents-proof-tile/style.scss
+++ b/packages/manager/apps/dedicated/client/app/account/identity-documents/components/identity-documents-proof-tile/style.scss
@@ -1,4 +1,13 @@
+@import '@ovh-ux/ui-kit/dist/scss/tokens/_colors';
+@import '@ovh-ux/ui-kit/dist/scss/tokens/_fonts';
+@import '@ovh-ux/ui-kit/dist/scss/tokens/_globals';
+
 .oui-box_kyc-digital-process {
+  max-width: 80%;
+  @media (max-width: $device-breakpoint-tablet-max-width) {
+    max-width: 100%;
+  }
+
   &.oui-box_tagged {
     position: relative;
     .oui-box__tag {
